--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
-<h1> Hello, World!</h1>
-<h3> Seth here, working on some stuff</h3>
+<h1> Haha!</h1>
+<h3> You think you're so clever don't you</h3>
+<h3> Well there's nothing here....</h3>
+<h3> Except?</h3>
+
