--- a/index.html
+++ b/index.html
@@ -2,4 +2,5 @@
 <h3> You think you're so clever don't you</h3>
 <h3> Well there's nothing here....</h3>
 <h3> Except?</h3>
+<img src="cover3.jpg" alt="Mike">
 
