--- a/mail_yo_self.html
+++ b/mail_yo_self.html
@@ -1,3 +1,5 @@
+<body style="background-color:powderblue;">
+
 <h1>Eyyy yo, you ever wanted to talk to yourself in the future?!</h1>
 <h3>~~ Well here's your chance to! ~~ </h3>
 
@@ -15,4 +17,6 @@
 
 
 <h5>Term and conditions apply send mail at your own risk!!!</h5>
-<h6>(Am I a mail manipulator?)</h6>
+<h5>(Am I a mail manipulator?)</h5>
+
+</body>
