--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
+<body style="background-color:violet;">
+
 <h1> Haha!</h1>
 <h3> You think you're so clever don't you</h3>
 <h3> Well there's nothing here....</h3>
 <h3> Except?</h3>
 <img src="cover3.jpg" alt="Mike">
 
+</body>
