--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
 <h3> Well there's nothing here....</h3>
 <h3> Except?</h3>
 <img src="cover3.jpg" alt="Mike">
-
+<h4> Nah just a pic of Mike</h4>
 </body>
