--- a/mail_yo_self.html
+++ b/mail_yo_self.html
@@ -1,5 +1,15 @@
 <body style="background-color:powderblue;">
 
+<head>
+  <link rel="mail.jpg" type="image/x-icon" href="favicon.ico">
+  <style>
+  .content {
+    max-width: 500px;
+    margin: auto;
+  }
+  </style>
+</head>
+  
 <h1>Eyyy yo, you ever wanted to talk to yourself in the future?!</h1>
 <h3>~~ Well here's your chance to! ~~ </h3>
 
@@ -21,9 +31,3 @@
 
 </body>
   
-<style>
-.content {
-  max-width: 500px;
-  margin: auto;
-}
-</style>
