--- a/mail_yo_self.html
+++ b/mail_yo_self.html
@@ -10,7 +10,7 @@
   </style>
 </head>
   
-<h1>Eyyy yo, you ever wanted to talk to yourself in the future?!</h1>
+<h1>style="color:purple; font-size:30px;Eyyy yo, you ever wanted to talk to yourself in the future?!</h1>
 <h3>~~ Well here's your chance to! ~~ </h3>
 
 <h2>Limited 1 time only offer, for the low low price of $99 a year</h2>
