--- a/mail_yo_self.html
+++ b/mail_yo_self.html
@@ -10,7 +10,7 @@
   </style>
 </head>
   
-<h1>style="color:purple; font-size:30px;Eyyy yo, you ever wanted to talk to yourself in the future?!</h1>
+<h1 style="color:purple; font-size:30px;">Eyyy yo, you ever wanted to talk to yourself in the future?!</h1>
 <h3>~~ Well here's your chance to! ~~ </h3>
 
 <h2>Limited 1 time only offer, for the low low price of $99 a year</h2>
@@ -19,7 +19,7 @@
 <h2>Mail me a letter with a note to yourself and I will mail it back to you at a specified time in the future!</h2>
 
 
-<h2>If that's not talking to yourself in the future I don't know what is???</h2>
+<h2 style=font-style:italic;"> If that's not talking to yourself in the future I don't know what is???</h2>
 
 <h2>1023 Bathurst St. Toronto <-- send your mail and $99 there</h2>
 
