--- a/mail_yo_self.html
+++ b/mail_yo_self.html
@@ -28,9 +28,9 @@
                            <h5>Term and conditions apply send mail at your own risk!!!</h5>
                         <h5>(Am I a mail manipulator? -- I mean I do listen to the smiths...)</h5>
                                                                          
-                              <h2 style="color:green>Reviews: </h2>
+                              <h2 style="color:green">Reviews: </h2>
                               
-                              <h3 style="color:green>Jessica Kunka: ★★★★★ "Absolutely wild" </h3>
+                              <h3 style="color:green">Jessica Kunka: ★★★★★ "Absolutely wild" </h3>
 
 </body>
   
