--- a/silly_goose.html
+++ b/silly_goose.html
@@ -1,7 +1,16 @@
-
+<html>
+<head>
+<style>
+h1 {text-align: center;}
+p {text-align: center;}
+div {text-align: center;}
+</style>
+</head>
+  
+<h1> Hey Cutie!</h1>
+<h3> Do you like this song?</h3>
 <body style="background-color:Cornsilk;">
 
 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5wokn9ia6HcvKiHhwGjOhc?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-
-<h1> Hey Cutie!</h1>
+<p>I hope the answer is yes ... because --> ________</p>
 </body>
