--- a/silly_goose.html
+++ b/silly_goose.html
@@ -12,5 +12,5 @@ div {text-align: center;}
 <body style="background-color:Cornsilk;">
 
 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5wokn9ia6HcvKiHhwGjOhc?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-<p>I hope the answer is yes ... because --> ________</p>
+<p>I hope the answer is yes ... because --> <a href="https://www.sethmcgregor.com/concert_tickets" target="_blank"> Click me ;)</a> </p>
 </body>
