--- a/concert_tickets.html
+++ b/concert_tickets.html
@@ -14,5 +14,5 @@ div {text-align: center;}
 <h3> You, me and nobody else!</h3>
 <h3> Well there's nothing here....</h3>
 <h3> Except?</h3>
-<img src="tickets_plane.jpg" alt="Plane">
+<img src="tickets_plane.png" alt="Plane">
 </body>
