--- a/concert_tickets.html
+++ b/concert_tickets.html
@@ -9,10 +9,9 @@ div {text-align: center;}
 </head>
 
 <body style="background-color:PaleGreen;">
-
-<h1> We're Going!</h1>
-<h3> You, me and nobody else!</h3>
-<h3> Well there's nothing here....</h3>
-<h3> Except?</h3>
-<div><img src="tickets_plane.png" alt="Plane"></div>
+  
+<div style="border-radius:15px;-webkit-border-radius:15px;-moz-border-radius:15px;width:45%;float:center;background-color:#fff9a6;margin-left:0;padding:10px;text-align:center;">
+<h3>We have tickets!</h3>
+</div>
+<div><img src="tickets_concert.png" alt="Plane"></div>
 </body>
