--- a/silly_goose.html
+++ b/silly_goose.html
@@ -2,13 +2,13 @@
 <head>
 <style>
 h1 {text-align: center;}
-p {text-align: center;}
+h2 {text-align: center;}
 div {text-align: center;}
 </style>
 </head>
   
 <h1> Hey Cutie!</h1>
-<h3> Do you like this song?</h3>
+<h2> Do you like this song?</h2>
 <body style="background-color:Cornsilk;">
 
 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5wokn9ia6HcvKiHhwGjOhc?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
