--- a/concert_tickets.html
+++ b/concert_tickets.html
@@ -7,10 +7,8 @@ p {text-align: center;}
 div {text-align: center;}
 </style>
 </head>
-
-<body style="background-color:PaleGreen;">
   
-<div style="border-radius:15px;-webkit-border-radius:15px;-moz-border-radius:15px;width:45%;float:center;background-color:#fff9a6;margin-left:0;padding:10px;text-align:center;">
+<div style="border-radius:15px;background-color:#E6E6FA;padding:10px;text-align:center;">
 <h3>We have tickets!</h3>
 </div>
 <div><img src="tickets_concert.png" alt="Plane"></div>
