--- a/plane_tickets.html
+++ b/plane_tickets.html
@@ -10,7 +10,7 @@ div {text-align: center;}
 
 <body style="background-color:MediumAquamarine;">
   
-<div style="border-radius:15px;-webkit-border-radius:15px;-moz-border-radius:15px;width:45%;float:center;background-color:#e6e6fa;margin-left:0;padding:10px;text-align:center;">
+<div style="border-radius:15px;background-color:#E6E6FA;padding:10px;text-align:center;">
 <h3>I'm coming to see you!</h3>
 </div>
   
