--- a/silly_goose.html
+++ b/silly_goose.html
@@ -7,12 +7,12 @@ div {text-align: center;}
 </style>
 </head>
   
-<h1> Hey Cutie!</h1>
+<h1> Hey Cutie, Happy Valentines Day!</h1>
 <h2> Do you like this song?</h2>
 <body style="background-color:Cornsilk;">
 
 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5wokn9ia6HcvKiHhwGjOhc?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 <h3>I hope the answer is yes, because:</h3>
 <p>1: I like it and it makes me think of you 😊</p>
-<p>2:<a href="https://www.sethmcgregor.com/concert_tickets" target="_blank"> AND! </a> </p>
+<p>2:<a href="https://www.sethmcgregor.com/concert_tickets" target="_blank"> Also because </a> </p>
 </body>
