--- a/silly_goose.html
+++ b/silly_goose.html
@@ -3,7 +3,7 @@
 <style>
 h1 {text-align: center;}
 h2 {text-align: center;}
-div {text-align: center;}
+a {text-align: center;}
 </style>
 </head>
   
@@ -12,7 +12,20 @@ div {text-align: center;}
 <body style="background-color:Cornsilk;">
 
 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5wokn9ia6HcvKiHhwGjOhc?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-<h3>I hope the answer is yes, because:</h3>
-<p>1: I like it and it makes me think of you 😊</p>
-<p>2:<a href="https://www.sethmcgregor.com/concert_tickets" target="_blank"> Also because </a> </p>
+<h3>I hope the you do, because I like it and it makes me think of you 😊</h3>
+  
+<p>I love you so much. It's a little embarassing frankly, like from the moment I wake up I think about you.
+  You are so incredibly smart, beautiful, and silly! You really make me feel like the luckiest guy in the world.
+  These last 6-7 months have been incredibly wonderful, so here's to many more months of awesome adventures!
+</p>
+  
+<p>I'm sorry I couldn't see you on valentines day, but I hope I can make it up to you by planning a fun date for us so here you are:</p>
+
+<a href="https://www.sethmcgregor.com/date_night" target="_blank"> Seth & Cals Super Fun Date Night </a>
+  
+<p>I can't wait to see you tomorrow</p>
+<p>Yours,</p>
+<p>Seth </p>
+<div><img src="puffin_small.png" alt="puffin"></div>
+
 </body>
