--- a/concert_tickets.html
+++ b/concert_tickets.html
@@ -8,8 +8,8 @@ div {text-align: center;}
 </style>
 </head>
   
-<div style="border-radius:15px;background-color:#E6E6FA;padding:10px;text-align:center;">
-<h3>We have tickets!</h3>
-</div>
-<div><img src="tickets_concert.png" alt="Plane"></div>
+<h3>I really hope you like them!</h3>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/4VOZ1IKWpsLDgJQfzGMBEF?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+<h3>Because we have tickets!</h3>
+<div><img src="tickets_concert.png" alt="Concert tickets"></div>
 </body>
