--- a/silly_goose.html
+++ b/silly_goose.html
@@ -8,20 +8,27 @@ a {text-align: center;}
 </head>
   
 <h1> Hey Cutie, Happy Valentines Day!</h1>
+  
+<div style="float: left; width: 50%">
+  <p>I love you so much. It's a little embarassing frankly, like from the moment I wake up I think about you.
+    You are so incredibly smart, beautiful, and silly! You really make me feel like the luckiest guy in the world.
+    These last 6-7 months have been incredibly wonderful, so here's to many more months of awesome adventures!
+  </p>
+  <a href="https://www.sethmcgregor.com/date_night" target="_blank"> Seth & Cals Super Fun Date Night </a>
+ </div>  
+  
 <h2> Do you like this song?</h2>
 <body style="background-color:Cornsilk;">
 
 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5wokn9ia6HcvKiHhwGjOhc?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-<h3>I hope the you do, because I like it and it makes me think of you 😊</h3>
+<h3>I hope you like it, because it makes me think of you 😊</h3>
   
-<p>I love you so much. It's a little embarassing frankly, like from the moment I wake up I think about you.
-  You are so incredibly smart, beautiful, and silly! You really make me feel like the luckiest guy in the world.
-  These last 6-7 months have been incredibly wonderful, so here's to many more months of awesome adventures!
-</p>
-  
-<p>I'm sorry I couldn't see you on valentines day, but I hope I can make it up to you by planning a fun date for us so here you are:</p>
+<div style="float: left; width: 50%">
 
-<a href="https://www.sethmcgregor.com/date_night" target="_blank"> Seth & Cals Super Fun Date Night </a>
+  <p>I'm sorry I couldn't see you on valentines day, but I hope I can make it up to you by planning a fun date for us so here you are:</p>
+
+  <a href="https://www.sethmcgregor.com/date_night" target="_blank"> Seth & Cals Super Fun Date Night </a>
+ </div>
   
 <p>I can't wait to see you tomorrow</p>
 <p>Yours,</p>
