--- a/date_night.html
+++ b/date_night.html
@@ -9,13 +9,19 @@ div {text-align: center;}
 </head>
   
 <div style="border-radius:15px;background-color:#E6E6FA;padding:10px;text-align:center;">
-  <h5>Ok, so first of all for a good date night I need to come see you right?"</h5>
+  <h1>You Are Formally Invited to Cal & Seth's Super Fun Date Night™:</h1>
+  <h2>When: Satuday March 4th 2023</h2>
+  <h2>Dress Code: Casual</h2>
+  <h2>Itinerary:</h2>
+  <h3>First of all for a good date night I need to come see you right?</h3>
   <div><img src="tickets_plane.png" alt="Plane"></div>
-  <p>Then a nice dinner:</p>
-  <a href="https://www.yelp.com/reservations/mila-plant-based-vancouver/confirmed/8ad518a4-0b13-46d5-bbb0-4a46bc44b1a2?share=1" target="_blank"> They even have noodles😉 </a>
-  <p>After dinner for the main show:</p>
-  <a href="https://www.sethmcgregor.com/concert_tickets" target="_blank">Link for the show</a>
-  <p>And then it'll be time to head back to your place! I hope you're as excited as I am. Can't wait to see you :)</p>
+  <p>Then we can have a nice dinner:</p>
+  <a href="https://www.yelp.com/reservations/mila-plant-based-vancouver/confirmed/8ad518a4-0b13-46d5-bbb0-4a46bc44b1a2?share=1" target="_blank"> They even have noodles ;) </a>
+  <p>Then after dinner we need to do something fun right!:</p>
+  <a href="https://www.sethmcgregor.com/concert_tickets" target="_blank">It's showtime</a>
+  <p>And to end the night we can head back to your place and spend the night together!</p>
+  <p>I hope you're as excited as I am, can't wait to see you.</p>
+  <p>-Seth</p>
 </div>
 
 
