--- a/silly_goose.html
+++ b/silly_goose.html
@@ -6,6 +6,8 @@ h2 {text-align: center;}
 a {text-align: center;}
 </style>
 </head>
+ 
+<body style="background-color:Cornsilk;">
   
 <h1> Hey Cutie, Happy Valentines Day!</h1>
   
@@ -14,19 +16,17 @@ a {text-align: center;}
     You are so incredibly smart, beautiful, and silly! You really make me feel like the luckiest guy in the world.
     These last 6-7 months have been incredibly wonderful, so here's to many more months of awesome adventures!
   </p>
-  <a href="https://www.sethmcgregor.com/date_night" target="_blank"> Seth & Cals Super Fun Date Night </a>
  </div>  
   
+<div style="float: left; width: 100%">
 <h2> Do you like this song?</h2>
-<body style="background-color:Cornsilk;">
 
 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5wokn9ia6HcvKiHhwGjOhc?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 <h3>I hope you like it, because it makes me think of you 😊</h3>
+ </div> 
   
 <div style="float: left; width: 50%">
-
   <p>I'm sorry I couldn't see you on valentines day, but I hope I can make it up to you by planning a fun date for us so here you are:</p>
-
   <a href="https://www.sethmcgregor.com/date_night" target="_blank"> Seth & Cals Super Fun Date Night </a>
  </div>
   
