--- a/date_night.html
+++ b/date_night.html
@@ -15,11 +15,11 @@ div {text-align: center;}
   <h2>Itinerary:</h2>
   <h3>First of all for a good date night I need to come see you right?</h3>
   <div><img src="tickets_plane.png" alt="Plane"></div>
-  <p>Then we can have a nice dinner:</p>
+  <h3>Then we can have a nice dinner:</h3>
   <a href="https://www.yelp.com/reservations/mila-plant-based-vancouver/confirmed/8ad518a4-0b13-46d5-bbb0-4a46bc44b1a2?share=1" target="_blank"> They even have noodles ;) </a>
-  <p>Then after dinner we need to do something fun right!:</p>
+  <h3>Then after dinner we need to do something fun!</h3>
   <a href="https://www.sethmcgregor.com/concert_tickets" target="_blank">It's showtime</a>
-  <p>And to end the night we can head back to your place and spend the night together!</p>
+  <h3>And to end the night we can head back to your place and spend the night together!</h3>
   <p>I hope you're as excited as I am, can't wait to see you.</p>
   <p>-Seth</p>
 </div>
