--- a/silly_goose.html
+++ b/silly_goose.html
@@ -9,7 +9,7 @@ a {text-align: center;}
  
 <body style="background-color:Cornsilk;">
   
-<h1> Hey Cutie, Happy Valentines Day!</h1>
+<h1> Hey Cutie, Happy Valentines Day!❤️</h1>
   
 <div style="float: left; width: 50%">
   <p>I love you so much. It's a little embarassing frankly, like from the moment I wake up I think about you.
