--- a/concert_tickets.html
+++ b/concert_tickets.html
@@ -7,9 +7,9 @@ p {text-align: center;}
 div {text-align: center;}
 </style>
 </head>
-  
-<h3>I really hope you like them!</h3>
-<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/4VOZ1IKWpsLDgJQfzGMBEF?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-<h3>Because we have tickets!</h3>
+ 
+<body style="background-color:Cornsilk;">
+<h1>I hope you like them!</h1>
+<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/4VOZ1IKWpsLDgJQfzGMBEF?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 <div><img src="tickets_concert.png" alt="Concert tickets"></div>
 </body>
