--- a/silly_goose.html
+++ b/silly_goose.html
@@ -2,8 +2,7 @@
 <head>
 <style>
 h1 {text-align: center;}
-h2 {text-align: center;}
-a {text-align: center;}
+ a {text-align: center;}
 </style>
 </head>
  
@@ -22,11 +21,11 @@ a {text-align: center;}
 <h2> Do you like this song?</h2>
 
 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5wokn9ia6HcvKiHhwGjOhc?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-<h3>I hope you like it, because it makes me think of you 😊</h3>
+<h3>It makes me think of you 😊</h3>
  </div> 
   
 <div style="float: left; width: 50%">
-  <p>I'm sorry I couldn't see you on valentines day, but I hope I can make it up to you by planning a fun date for us so here you are:</p>
+  <p>I'm sorry I couldn't see you on valentines day, but I hope I can make it up to you by planning a fun date for us. So here you are:</p>
   <a href="https://www.sethmcgregor.com/date_night" target="_blank"> Seth & Cals Super Fun Date Night </a>
  <p>I can't wait to see you tomorrow</p>
  <p>Yours,</p>
