--- a/date_night.html
+++ b/date_night.html
@@ -8,7 +8,7 @@ div {text-align: center;}
 </style>
 </head>
   
-<div style="border-radius:15px;background-color:#E6E6FA;padding:10px;text-align:center;">
+<div style="border-radius:15px;background-color:#B0E0E6;padding:10px;text-align:center;">
   <h1>You Are Formally Invited to Cal & Seth's Super Fun Date Night™:</h1>
   <h2>When: Satuday March 4th 2023</h2>
   <h2>Dress Code: Casual</h2>
@@ -22,6 +22,8 @@ div {text-align: center;}
   <h3>And to end the night we can head back to your place and spend the night together!</h3>
   <p>I hope you're as excited as I am, can't wait to see you.</p>
   <p>-Seth</p>
+  
+  <a target="_blank" href="https://calendar.google.com/calendar/event?action=TEMPLATE&amp;tmeid=MGYwa2phbGI4bmYzZTdraGN1MDdzb2Q3ZTkgYzQ1NDM2ZWZhZTQxNGM5YzJkZmVhZTJkMjNkZjhkM2Y2ZGQ5ZDQzYmJjZGU0YzhlZTIyNGMxYmY4MTBmN2JkYkBn&amp;tmsrc=c45436efae414c9c2dfeae2d23df8d3f6dd9d43bbcde4c8ee224c1bf810f7bdb%40group.calendar.google.com"><img border="0" src="https://www.google.com/calendar/images/ext/gc_button1_en.gif"></a>
 </div>
 
 
