--- a/silly_goose.html
+++ b/silly_goose.html
@@ -11,8 +11,9 @@ h1 {text-align: center;}
 <h1> Hey Cutie, Happy Valentines Day!❤️</h1>
   
 <div style="float: left; width: 50%">
-  <p>I love you so much. It's a little embarassing frankly, like from the moment I wake up I think about you.
-    You are so incredibly smart, beautiful, and silly! You really make me feel like the luckiest guy in the world.
+  <p>I love you so much. It's a little embarassing frankly, like every morning 
+    I wake up I think about you and I can't wait to talk to you at the end of every day.
+    You are so incredibly smart, beautiful, silly, but most of all you just make me feel like the luckiest guy in the world.
     These last 6-7 months have been incredibly wonderful, so here's to many more months of awesome adventures!
   </p>
  </div>  
@@ -25,7 +26,7 @@ h1 {text-align: center;}
  </div> 
   
 <div style="float: left; width: 50%">
-  <p>I'm sorry I couldn't see you on valentines day, but I hope I can make it up to you by planning a fun date for us. So here you are:</p>
+  <p>I'm sorry I couldn't see you on valentines day, but I hope I can make it up to you by planning a super-fun date for us. So here you are:</p>
   <a href="https://www.sethmcgregor.com/date_night" target="_blank"> Seth & Cals Super Fun Date Night </a>
  <p>I can't wait to see you tomorrow</p>
  <p>Yours,</p>
