--- a/silly_goose.html
+++ b/silly_goose.html
@@ -13,7 +13,7 @@ h1 {text-align: center;}
 <div style="float: left; width: 50%">
   <p>I love you so much. It's a little embarassing frankly, like every morning 
     I wake up I think about you and I can't wait to talk to you at the end of every day.
-    You are so incredibly smart, beautiful, silly, but most of all you just make me feel like the luckiest guy in the world.
+    You are so incredibly smart, beautiful, silly, and you just make me feel like the luckiest guy in the world.
     These last 6-7 months have been incredibly wonderful, so here's to many more months of awesome adventures!
   </p>
  </div>  
