--- a/concert_tickets.html
+++ b/concert_tickets.html
@@ -9,7 +9,7 @@ div {text-align: center;}
 </head>
  
 <body style="background-color:Cornsilk;">
-<h1>I hope you like the band! -- Beacause we have tickets :)</h1>
+<h1>I hope you like the band! -- Because we have tickets :)</h1>
 <h3>I think it'll be fun, and hopefully not stressfull, but if it is we can always cut it short!</h3>
 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/4VOZ1IKWpsLDgJQfzGMBEF?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 <div><img src="tickets_concert.png" alt="Concert tickets"></div>
