--- a/silly_goose.html
+++ b/silly_goose.html
@@ -22,7 +22,7 @@ h1 {text-align: center;}
 <h2> Do you like this song?</h2>
 
 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5wokn9ia6HcvKiHhwGjOhc?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-<h3>It makes me think of you 😊</h3>
+<h3>It makes me think of you 😊 (and it's funky!)</h3>
  </div> 
   
 <div style="float: left; width: 50%">
