--- a/mayas_birthday.html
+++ b/mayas_birthday.html
@@ -19,8 +19,13 @@ h1 {text-align: center;}
 <h2> Here's a classicly good maya song!</h2>
 
 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/7lQgoAWAFAo0XW7dW2TL1y?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+</div> 
+
+<div style="float: left; width: 50%">
+  <p> Test
+  </p>
  </div> 
-  
+ 
 <div style="float: left; width: 50%">
   <p>Hope you like it, because here is you birthday gift from your friends!:</p>
   <a href="https://www.sethmcgregor.com/vampire_weekend" target="_blank"> Maya's Birthday Event</a>
