--- a/mayas_birthday.html
+++ b/mayas_birthday.html
@@ -12,11 +12,12 @@ h1 {text-align: center;}
   
 <div style="float: left; width: 50%">
   <p> You are such a fantastic friend! Thank you for always being there for a fun convo/ chill (love a good chill) or a heartfelt talk.
+    We will miss you lots when you're in Israel, but will always try to keep in touch. 
   </p>
  </div>  
   
 <div style="float: left; width: 100%">
-<h2> Here's a classicly good maya song!</h2>
+<h2> Here's a classically good maya song!</h2>
 
 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/7lQgoAWAFAo0XW7dW2TL1y?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
 </div> 
