--- a/mayas_birthday.html
+++ b/mayas_birthday.html
@@ -23,7 +23,7 @@ h1 {text-align: center;}
 
 </div> 
 <div style="float: left; width: 50%">
-  <p>Hope you like it, because here is you birthday gift from your friends!:</p>
+  <p>Hope you like it, because here is your birthday gift from your friends!</p>
   <a href="https://www.sethmcgregor.com/vampire_weekend" target="_blank"> Maya's Birthday Event</a>
  <p>Best,</p>
  <p>Seth & Layla</p>
