--- a/vampire_weekend.html
+++ b/vampire_weekend.html
@@ -10,6 +10,6 @@ div {text-align: center;}
  
 <body style="background-color:LightCyan;">
 <h1>Hope you have fun!!</h1>
-<h3>To go with Layla or any friend of your choosing:)</h3>
+<h3>To go with Layla or anyone of your choosing:)</h3>
 <div><img src="week.jpg" alt="Concert tickets"></div>
 </body>
