--- a/mayas_birthday.html
+++ b/mayas_birthday.html
@@ -12,7 +12,7 @@ h1 {text-align: center;}
   
 <div style="float: left; width: 50%">
   <p> You are such a fantastic friend! Thank you for always being there for a fun convo/ chill (love a good chill) or a heartfelt talk.
-    We will miss you lots when you're in Israel, but will always try to keep in touch. 
+    We will miss you lots when you're in Israel, but will always keep in touch. 
   </p>
  </div>  
   
