--- a/hanukkah.html
+++ b/hanukkah.html
@@ -68,7 +68,7 @@
   </div>
 
   <div class="content">
-    <h2>Here's a song to get you hyped — (Only with you love in spirit)</h2>
+    <h2>Here's a song to get you hyped — (I'll be with you in spirit)</h2>
     <iframe class="spotify-embed" src="https://open.spotify.com/embed/track/1Eg4CmLudi51fJHjY6kegZ?utm_source=generator" width="100%" height="152" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
   </div>
 
