adding text to airbnb page

--- a/surprise.html
+++ b/surprise.html
@@ -80,6 +80,17 @@
 
 <div class="container">
 
+  <div class="content">
+    <p>You're going to Trieste!!!</p>
+  </div>
+
+  <div class="content">
+    <p>I really hope you enjoy it, I haven't booked you train tickets yet so we can iron out what time you want to go and come back!</p>
+  </div>
+
+  <div class="content">
+    <p>Take a friend, or go by yourself! This is where you're staying, happy hunakkah, I hope you enjoy it 😊</p>
+  </div>
 
   <div class="image-section">
     <img class="image1" src="pic5_bnb.avif" alt="Airbnb Room 1">
